--- a/src/assets/css/partials/utils.pcss
+++ b/src/assets/css/partials/utils.pcss
@@ -42,16 +42,6 @@
   gap: 0.25rem;
 }
 
-ul.list-none,
-ul.list-inline {
-  list-style: none;
-  padding: 0;
-}
-
-ul.list-inline > li {
-  display: inline;
-}
-
 .overflow-auto {
   overflow: auto;
 }
